k8s-manifests/infra-auditor/middleware-stripprefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-audit-prefix
  namespace: audit-project
spec:
  stripPrefix:
    prefixes:
      - /audit
