k8s-manifests/infra-auditor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: audit-project
  labels:
    name: audit-project
    env: production
