k8s-manifests/infra-auditor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra-auditor
  namespace: audit-project
  labels:
    app: infra-auditor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: infra-auditor
  template:
    metadata:
      labels:
        app: infra-auditor
    spec:
      containers:
      - name: web-server
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
