k8s-manifests/infra-auditor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auditor-svc
  namespace: audit-project
spec:
  selector:
    app: infra-auditor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
